Fixed build error

--- a/StellaClient.Test/StellaClient.Test.csproj
+++ b/StellaClient.Test/StellaClient.Test.csproj
@@ -13,6 +13,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
   </PropertyGroup>
 
 </Project>
