--- a/EndToEndTests/EndToEndTests.csproj
+++ b/EndToEndTests/EndToEndTests.csproj
@@ -2,11 +2,13 @@
 
   <ItemGroup>
     <ProjectReference Include="..\StellaClient\StellaClient.csproj" />
+    <ProjectReference Include="..\StellaServer\StellaServer.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
   </PropertyGroup>
 
 </Project>
