--- a/StellaClient.Test/StellaClient.Test.csproj
+++ b/StellaClient.Test/StellaClient.Test.csproj
@@ -14,6 +14,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
+    <OutputType>Exe</OutputType>
   </PropertyGroup>
 
 </Project>
