--- a/StellaServer/StellaServer.csproj
+++ b/StellaServer/StellaServer.csproj
@@ -1,6 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <PackageReference Include="System.Drawing.Common" Version="4.5.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\StellaLib\StellaLib.csproj" />
   </ItemGroup>
 
