--- a/StellaVisualizer/packages.config
+++ b/StellaVisualizer/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Fody" version="3.3.5" targetFramework="net461" developmentDependency="true" />
   <package id="PropertyChanged.Fody" version="2.6.0" targetFramework="net461" />
+  <package id="System.Drawing.Common" version="4.5.1" targetFramework="net461" />
 </packages>
