--- a/StellaServer.Test/StellaServer.Test.csproj
+++ b/StellaServer.Test/StellaServer.Test.csproj
@@ -12,6 +12,12 @@
     <PackageReference Include="System.Drawing.Common" Version="4.5.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="TestData\TestStoryBoardLoader\fakeImage.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <TargetLatestRuntimePatch>true</TargetLatestRuntimePatch>
