--- a/StellaServerConsole/StellaServerConsole.csproj
+++ b/StellaServerConsole/StellaServerConsole.csproj
@@ -13,6 +13,9 @@
     <None Update="Resources\Configuration\MappingExample.yaml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Resources\Storyboards\StoryboardExample.yaml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   
 </Project>
