Implemented RelativeStart in the AnimatorCreator

--- a/StellaServerConsole/Resources/Storyboards/SmallTest.yaml
+++ b/StellaServerConsole/Resources/Storyboards/SmallTest.yaml
@@ -10,4 +10,5 @@ Animations:
    StartIndex:  15
    StripLength: 15
    FrameWaitMs: 50
+   RelativeStart: 1000q
    Pattern: [[0,0,0], [0,0,255], [0,0,0]]
