Added Configuration and ConfigurationLoader

--- a/StellaClient/StellaClient.csproj
+++ b/StellaClient/StellaClient.csproj
@@ -1,6 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <PackageReference Include="SharpYaml" Version="1.6.5" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\StellaLib\StellaLib.csproj" />
     <ProjectReference Include="..\rpi_ws281x\rpi_ws281x.csproj" />
   </ItemGroup>
