--- a/StellaClient/StellaClient.csproj
+++ b/StellaClient/StellaClient.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
     <PackageReference Include="SharpYaml" Version="1.6.5" />
@@ -7,6 +7,13 @@
   <ItemGroup>
     <ProjectReference Include="..\StellaLib\StellaLib.csproj" />
     <ProjectReference Include="..\rpi_ws281x\rpi_ws281x.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Resources\Configuration.yaml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </None>
   </ItemGroup>
 
   <PropertyGroup>
