--- a/StellaServerAPI/StellaServerAPI.csproj
+++ b/StellaServerAPI/StellaServerAPI.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\StellaLib\StellaLib.csproj" />
+  </ItemGroup>
+
 </Project>
