--- a/StellaWebInterface/backend/package.json
+++ b/StellaWebInterface/backend/package.json
@@ -13,7 +13,8 @@
     "express": "~4.16.0",
     "express-session": "^1.16.1",
     "http-errors": "~1.6.2",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
