--- a/StellaWebInterface/package.json
+++ b/StellaWebInterface/package.json
@@ -33,6 +33,8 @@
     "react-scripts": "^2.1.8",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
+    "socket.io-client": "^2.2.0",
+    "socket.io-react": "^1.2.0",
     "style-loader": "^0.21.0",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.1",
