--- a/StellaWebInterface/backend/package.json
+++ b/StellaWebInterface/backend/package.json
@@ -14,6 +14,7 @@
     "express-session": "^1.16.1",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
+    "net": "^1.0.2",
     "socket.io": "^2.2.0"
   },
   "devDependencies": {
