Add backend to server automatic reconnect after connection failed.

--- a/StellaWebInterface/backend/config/config.json
+++ b/StellaWebInterface/backend/config/config.json
@@ -1,5 +1,9 @@
 {
   "express": {
     "sessionSecret": "cogito-session-secret-try-out"
+  },
+  "stellaServerConsole": {
+    "ip": "192.168.2.78",
+    "port": 20060
   }
 }
