--- a/StellaWebInterface/package.json
+++ b/StellaWebInterface/package.json
@@ -22,6 +22,7 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
+    "fs": "0.0.1-security",
     "fusioncharts": "^3.12.2",
     "material-ui-image": "^3.2.0",
     "react": "^16.3.2",
@@ -37,6 +38,7 @@
     "socket.io-client": "^2.2.0",
     "socket.io-react": "^1.2.0",
     "style-loader": "^0.21.0",
+    "uglify-js": "^3.3.4",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.1",
     "webpack-dev-server": "^3.1.3"
