Made the BitmapDrawer draw from top->bottom to bottom-> top by default.

--- a/StellaServerConsole/Resources/Storyboards/TwoTubesTwoPis.yaml
+++ b/StellaServerConsole/Resources/Storyboards/TwoTubesTwoPis.yaml
@@ -6,6 +6,7 @@ Animations:
    StripLength: 240
    FrameWaitMs: 15
    ImagePath: C:\Users\jorisPrive\Desktop\vet\test-04-circle08.png
+   Wraps: true
  - !Bitmap	
    StartIndex:  240
    StripLength: 240
