--- a/StellaServerConsole/Resources/Storyboards/OneTubeTwoPis.yaml
+++ b/StellaServerConsole/Resources/Storyboards/OneTubeTwoPis.yaml
@@ -5,10 +5,10 @@ Animations:
    StartIndex:  0
    StripLength: 120
    FrameWaitMs: 10
-   ImagePath: C:\Users\jorisPrive\Desktop\vet\test-04-circle08.png
+   ImageName: test-04-circle08
  - !Bitmap	
    StartIndex:  120
    StripLength: 120
    FrameWaitMs: 10
    RelativeStart: 100
-   ImagePath: C:\Users\jorisPrive\Desktop\vet\test-04-circle08.png
+   ImageName: test-04-circle08
