--- a/StellaWebInterface/backend/package.json
+++ b/StellaWebInterface/backend/package.json
@@ -13,6 +13,7 @@
     "express": "~4.16.0",
     "express-session": "^1.16.1",
     "http-errors": "~1.6.2",
+    "js-yaml": "^3.13.1",
     "morgan": "~1.9.0",
     "net": "^1.0.2",
     "socket.io": "^2.2.0"
