--- a/StellaWebInterface/backend/package.json
+++ b/StellaWebInterface/backend/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node app",
-    "watcher": "nodemon app"
+    "watcher": "nodemon app --ignore savedData/*"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -16,6 +16,7 @@
     "js-yaml": "^3.13.1",
     "morgan": "~1.9.0",
     "net": "^1.0.2",
+    "pureimage": "^0.1.6",
     "socket.io": "^2.2.0"
   },
   "devDependencies": {
