--- a/StellaLib/StellaLib.csproj
+++ b/StellaLib/StellaLib.csproj
@@ -6,4 +6,8 @@
     <LangVersion>7.3</LangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="log4net" Version="2.0.8" />
+  </ItemGroup>
+
 </Project>
