--- a/StellaWebInterface/backend/package.json
+++ b/StellaWebInterface/backend/package.json
@@ -18,7 +18,8 @@
     "morgan": "~1.9.0",
     "net": "^1.0.2",
     "pureimage": "^0.1.6",
-    "socket.io": "^2.2.0"
+    "socket.io": "^2.2.0",
+    "socketio-file-upload": "^0.7.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
