--- a/StellaServerConsole/Resources/Configuration/Cloud/CloudMapping.yaml
+++ b/StellaServerConsole/Resources/Configuration/Cloud/CloudMapping.yaml
@@ -1,20 +1,20 @@
 ﻿!MappingSettings
 Mappings:
  - PiIndex: 0
-   Length:  1200
+   Length:  600
    StartIndexOnPi:  0
-   FirstSectionIsInverted:  False
-   SectionStarts:
-    - 600
+ - PiIndex: 0
+   Length:  600
+   StartIndexOnPi:  600
  - PiIndex: 1
-   Length:  1200
+   Length:  600
    StartIndexOnPi:  0
-   FirstSectionIsInverted:  False
-   SectionStarts:
-    - 600
+ - PiIndex: 1
+   Length:  600
+   StartIndexOnPi:  600
  - PiIndex: 2
-   Length:  1200
+   Length:  600
    StartIndexOnPi:  0
-   FirstSectionIsInverted:  False
-   SectionStarts:
-    - 600
+ - PiIndex: 2
+   Length:  600
+   StartIndexOnPi:  600
