--- a/StellaTestSuite/StellaTestSuite.csproj
+++ b/StellaTestSuite/StellaTestSuite.csproj
@@ -67,7 +67,7 @@
     </Compile>
     <Compile Include="Client\ClientViewerViewModel.cs" />
     <Compile Include="MainWindowViewModel.cs" />
-    <Compile Include="Model\MemoryServer.cs" />
+    <Compile Include="Model\Server\MemoryServer.cs" />
     <Compile Include="Server\ServerConfigurationControl.xaml.cs">
       <DependentUpon>ServerConfigurationControl.xaml</DependentUpon>
     </Compile>
