--- a/EndToEndTests/EndToEndTests.csproj
+++ b/EndToEndTests/EndToEndTests.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <ProjectReference Include="..\StellaClientLib\StellaClientLib.csproj" />
     <ProjectReference Include="..\StellaClient\StellaClient.csproj" />
     <ProjectReference Include="..\StellaServerLib\StellaServerLib.csproj" />
   </ItemGroup>
