--- a/StellaTestSuite/packages.config
+++ b/StellaTestSuite/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Fody" version="3.3.5" targetFramework="net461" developmentDependency="true" />
   <package id="PropertyChanged.Fody" version="2.6.0" targetFramework="net461" />
+  <package id="SharpYaml" version="1.6.5" targetFramework="net461" />
 </packages>
