--- a/StellaTestSuite/StellaTestSuite.csproj
+++ b/StellaTestSuite/StellaTestSuite.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -79,6 +80,10 @@
     <Compile Include="Server\ServerControl.xaml.cs">
       <DependentUpon>ServerControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Server\ServerControlPanelControl.xaml.cs">
+      <DependentUpon>ServerControlPanelControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Server\ServerControlPanelViewModel.cs" />
     <Compile Include="Server\ServerControlViewModel.cs" />
     <Compile Include="Model\MemoryNetworkController.cs" />
     <Page Include="Client\ClientViewerControl.xaml">
@@ -102,6 +107,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Server\ServerControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Server\ServerControlPanelControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
