--- a/StellaVisualizer/StellaVisualizer.csproj
+++ b/StellaVisualizer/StellaVisualizer.csproj
@@ -74,6 +74,7 @@
     </Compile>
     <Compile Include="Client\ClientViewerViewModel.cs" />
     <Compile Include="MainWindowViewModel.cs" />
+    <Compile Include="Model\Client\MemoryLedStrip.cs" />
     <Compile Include="Model\Client\MemoryStellaServer.cs" />
     <Compile Include="Model\Server\MemoryServer.cs" />
     <Compile Include="Server\ServerConfigurationControl.xaml.cs">
@@ -146,6 +147,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\rpi_ws281x\rpi_ws281x.csproj">
+      <Project>{F2FA304A-ECBA-474A-81A5-C93936778E78}</Project>
+      <Name>rpi_ws281x</Name>
+    </ProjectReference>
     <ProjectReference Include="..\StellaClientLib\StellaClientLib.csproj">
       <Project>{9270EC8B-BAC5-4098-9C21-DD1E8B45888E}</Project>
       <Name>StellaClientLib</Name>
