--- a/StellaWebInterface/backend/package.json
+++ b/StellaWebInterface/backend/package.json
@@ -13,6 +13,7 @@
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "express-session": "^1.16.1",
+    "ffmpeg": "0.0.4",
     "http-errors": "~1.6.2",
     "js-yaml": "^3.13.1",
     "morgan": "~1.9.0",
