--- a/StellaWebInterface/package.json
+++ b/StellaWebInterface/package.json
@@ -21,10 +21,12 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.11",
+    "dotnetify": "^3.4.0",
     "file-loader": "^1.1.11",
     "fs": "0.0.1-security",
     "fusioncharts": "^3.12.2",
     "material-ui-image": "^3.2.0",
+    "net": "^1.0.2",
     "react": "^16.3.2",
     "react-ace": "^7.0.2",
     "react-dom": "^16.3.2",
