Added clear storyboard

--- a/StellaServerConsole/Resources/Storyboards/Sterk/Clear.yaml
+++ b/StellaServerConsole/Resources/Storyboards/Sterk/Clear.yaml
@@ -1,8 +1,8 @@
 ﻿!Storyboard
-Name: Full length strobo
+Name: Clear
 Animations:
  - !RepeatingPattern
    StartIndex:  0
    StripLength: 2160
    FrameWaitMs: 55
-   Patterns: [[[255,255,255]],[[0,0,0]],[[0,0,0]],[[0,0,0]]]
+   Patterns: [[[0,0,0]]]
